--- a/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
+++ b/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
@@ -63,7 +63,7 @@
                 <li>
                     Refer & Earn
                 </li>
-                <li>
+                <li @click="redirectToSupport">
                     Support
                 </li>
                 <li @click="userLogout">
