--- a/WebClient/src/components/myaccount/vehicleAddComponent/vehicleAddComponent.template.html
+++ b/WebClient/src/components/myaccount/vehicleAddComponent/vehicleAddComponent.template.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" style="position: absolute; right: 15px; top: 22px;"
-                    data-dismiss="modal">
+                    data-dismiss="modal" @click="cancel">
                     &times;
                 </button>
                 <h4>Add Vechile Details</h4>
