--- a/WebClient/src/components/adminModule/manageServicesComponent/manageServicesComponent.template.html
+++ b/WebClient/src/components/adminModule/manageServicesComponent/manageServicesComponent.template.html
@@ -16,6 +16,8 @@
                         <th>Amount(Once)</th>
                         <th>Amount(Subscription)</th>
                         <th>Status</th>
+                        <th>Order</th>
+                        <th>Frequent</th>
                     </thead>
                     <tbody>
                         <tr v-for="service in serviceList" style="height: 50px;">
@@ -29,6 +31,10 @@
                             <td> {{service.VehicleCategoryType == 2 ? (service.StartingSubscriptionPrice ? '₹' + service.StartingSubscriptionPrice + '/-' : 'NA') : (service.SubscriptionPrice + '/-')}}</td>
                             <td>
                                 {{service.IsEnabled ? "Enabled" : "Disabled"}}
+                            </td>
+                            <td><input type="number" :disabled="!service.IsEnabled" v-model="service.ServiceOrder" class="form-control" @change="updateServiceFrequent(service)" ></td>
+                            <td>
+                                <input type="checkbox" :disabled="!service.IsEnabled" v-model="service.IsFrequent" @click="updateServiceFrequent(service, $event)" />
                             </td>
                         </tr>
                     </tbody>
